feat: update sidebar icon to SVG format and adjust content security policy for external styles

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         {
           "id": "markco-sidebar",
           "title": "Markco Comments",
-          "icon": "$(comment-discussion)"
+          "icon": "media/markco.svg"
         }
       ]
     },
