Refactor code structure for improved readability and maintainability

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,6 +40,15 @@
       }
     },
     {
+      "label": "Package",
+      "type": "shell",
+      "command": "vsce package -o .vsix/",
+      "presentation": {
+        "reveal": "silent",
+        "panel": "shared"
+      }
+    },
+    {
       "label": "Lint",
       "type": "shell",
       "command": "npm run lint",
